# backoffice_backend

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requests_test.py
.github/workflows/: qa.yaml
alembic/: env.py
alembic/versions/: 26b33a2875e1_add_relationship.py  2e6d0b346319_buuuh.py  4dae63071066_first.py  55ce3ccd2902_buuuh.py  6df8a64e635b_buuuh.py  c1fec3f6996d_add_relationship_of_board_with_.py  ddaf7113ef13_info_images.py
api/: main.py
api/core/: config.py  database.py  database_schema_generator.py  sql_admin_panel.py
api/core/loggr/: formatter.py  loggr.py
api/models/: __init__.py
api/repos/: auth_repo.py  board_image_repo.py  board_repo.py  rental_business_repo.py  superuser_repo.py
api/routers/: __init__.py
api/routers/backoffice/: __init__.py
api/routers/backoffice/backoffice_board/: __init__.py
api/routers/backoffice/backoffice_board/image/: __init__.py
api/routers/backoffice/backoffice_info/: __init__.py
api/routers/backoffice/backoffice_info/image/: __init__.py
api/routers/backoffice/login/: __init__.py
api/routers/backoffice/register/: __init__.py
api/routers/superuser/: __init__.py
api/schemas/: rental_business_schemas.py  schemas.py  superuser.py
api/services/: auth_service.py  board_image_service.py  board_service.py  rental_business_service.py  superuser_service.py
api/utils/: api_utils.py  api_validators.py  constants.py  enums.py  file_utils.py
tests/: test_api.py
uploaded_files/: readme
